# cs50ai

./: README.md  pyproject.toml
week0/tictactoe/: runner.py  test_tictactoe.py  tictactoe.py
week1/knights/: logic.py  puzzle.py
week1/minesweeper/: minesweeper.log.txt  minesweeper.py  runner.py  test.py
week2/heredity/: heredity.py  test.py
week2/pagerank/: pagerank.py  test.py
week3/crossword/: crossword.py  generate.py
week4/nim/: nim.py
week4/shopping/: shopping.py
week5/traffic/: .gitignore  README.md  traffic.py
week6/attention/: analysis.md  mask-torch.py  mask.py
week6/parser/: parser.py
