[project]
name = "ai-cs50"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xblurx", email = "tweaksdoubt@gmail.com" }
]
dependencies = [
    "pytest>=8.3.3",
    "pygame>=2.6.1",
    "check50>=3.3.11",
    "submit50>=3.2.0",
    "mypy>=1.14.1",
    "numpy>=1.24.4",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/week0"]
